--- a/_config.yml
+++ b/_config.yml
@@ -1,41 +1,49 @@
 # Site settings
-title:          Tale
-description:    "Minimal Jekyll theme for storytellers"
-baseurl:        "/tale"
-url:            "https://chesterhow.github.io"
+title: "블로그" # 블로그 제목
+description: "개발과 관련된 이야기들" # 블로그 설명
+baseurl: "" # GitHub Pages에서 루트에 위치할 경우 빈 문자열로 설정
+url: "https://023-dev.github.io" # 블로그 URL
 
 # Google Analytics
-google_analytics: UA—XXXXXXXX-X
+google_analytics: UA-XXXXXXXX-X # 자신의 Google Analytics 코드로 대체 (필요한 경우)
 
 # Author
 author:
-  name:         Chester How
-  url:          https://chester.how
-  email:        chesterhow@gmail.com
+  name: "023" # 블로그 작성자 이름
+  url: "https://github.com/023-dev" # 개인 웹사이트 (필요한 경우)
+  email: "rhdgmltkd88@gmail.com" # 이메일 주소 (필요한 경우)
 
 # Build settings
-markdown:       kramdown
+markdown: kramdown
 include:
   - _pages
 
 # Assets
 sass:
-  sass_dir:     _sass
-  style:        compressed
+  sass_dir: _sass
+  style: compressed
 
-# Gems
+# Plugins
 plugins:
   - jekyll-feed
   - jekyll-paginate
   - jekyll-seo-tag
-  # - jemoji #Uncomment this to allow emoji in your post
+  # - jemoji # 이모지를 사용하려면 주석을 해제
 
 # Permalinks
-permalink:      /:year-:month-:day/:title
-paginate:       5
+permalink: /:year-:month-:day/:title
+paginate: 5
 
 # Excludes
 exclude: [ Gemfile, Gemfile.lock, tale.gemspec ]
 
-# Disqus (Set to your disqus id)
-disqus:         jekyll-tale
+# Comments (Utterances 설정)
+comments:
+  provider: "utterances"
+  repo: "your-github-username/your-repo-name" # GitHub 댓글 저장소 (예: 023-dev/023-dev.github.io)
+  issue_term: "pathname" # 게시물 경로별로 댓글 연결
+  label: "comment" # 댓글의 GitHub 라벨 (선택 사항)
+  theme: "github-light" # Utterances 테마 (github-light 또는 github-dark 등)
+
+# Disqus 설정 (사용하지 않으므로 제거 가능)
+# disqus: "my-disqus-id"
