--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: "023" # 블로그 제목
-description: "개발과 관련된 이야기들" # 블로그 설명
+title: "기록도 록이다" # 블로그 제목
+description: "기록도 록이다" # 블로그 설명
 baseurl: "" # GitHub Pages에서 루트에 위치할 경우 빈 문자열로 설정
 url: "https://023-dev.github.io" # 블로그 URL
 
