--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@astrojs/react": "^4.4.2",
     "@astrojs/rss": "^4.0.15",
     "@astrojs/sitemap": "^3.7.0",
+    "@fontsource/noto-sans-kr": "^5.2.9",
     "@google-analytics/data": "^5.2.1",
+    "@resvg/resvg-js": "^2.6.2",
     "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^19.2.13",
     "@types/react-dom": "^19.2.3",
     "astro": "^5.17.1",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "satori": "^0.19.2",
+    "satori-html": "^0.3.2",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
